--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 title: Marvel Snap 情報局
 description: Marvel Snap情報サイト　定期的に更新します。
 theme: minima
+
+
+minima:
+  skin: dark  # dark, auto, classic など
+  social_links:
+    twitter: your_twitter
+    github: your_github
