--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Marvel Snap 情報局
 description: Marvel Snapの情報サイト　定期的に更新します
 theme: minima
+baseurl: "/marvelsnap.github.io"  # リポジトリ名と合わせる！
 url: "https://marvel-otaku.github.io"
+
 
 minima:
   skin: classic  # dark, auto, classic など
