--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ description: Marvel Snapの情報サイト　定期的に更新します
 theme: minima
 baseurl: "/marvelsnap.github.io"  # リポジトリ名と合わせる！
 url: "https://marvel-otaku.github.io"
+remote_theme: jekyll/minima
+
 
 
 minima:
