--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: マーベルスナップ攻略ブログ｜最強デッキ・イベント最新情報まとめ
 description: マーベルスナップ（マベスナ）の最新情報・カード一覧を掲載！最強デッキ、メタ変化、ランク戦のコツなど初心者も上級者にもためになる情報が満載！
-remote_theme: jekyll/minima
+#remote_theme: jekyll/minima
 baseurl: "/marvelsnap.github.io"  # リポジトリ名と合わせる！
 url: "https://marvel-otaku.github.io"
 
